--- a/movie/templates/home.html
+++ b/movie/templates/home.html
@@ -4,7 +4,7 @@
 
 <!-- <h1>Welcome to Home Page</h1> -->
 <h1>Welcome to Home Page, {{name}}</h1>
-<h2>This is the full home page</h2>
+<h2>Moises Arturo Vergara Garces</h2>
 
 <div class="container">
     <form action="">
