--- a/movie/templates/home.html
+++ b/movie/templates/home.html
@@ -6,34 +6,24 @@
 <h1>Welcome to Home Page, {{name}}</h1>
 <h2>Moises Arturo Vergara Garces</h2>
 
-<div class="container">
+<div class="container"> <!-- mejora el espaciado de la pagina-->
     <form action="">
-        <div class="mb-3">
-            <label for="searchMovie" class="form-label">
-                Search for Movie:
-            </label>
-            <input type="text" class="form-control" name="searchMovie"/>
-        </div>
+        Search for Movie:
+        <input type="text" class="form-control" name="searchMovie"/>
         <button type="submit" class="btn btn-primary">Search</button>
     </form>
     <p>Searching for {{searchTerm}}</p>
-
+    {% for movie in movies %}
     <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="{{ movie.image.url }}" class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">{{ movie.title }}</h5>
+            <p class="card-text">{{ movie.description }}</p>
+            {% if movie.url %}
+            <a href="{{ movie.url }}" class="btn btn-primary">Movie Link</a>
+            {% endif %}
         </div>
     </div>
-
-        {% for movie in movies %}
-            <h2>{{ movie.title}}</h2>
-            <h3>{{ movie.description}}</h3>
-            <img src="{{ movie.image.url }}">
-            {% if movie.url %}
-                <a href="{{ movie.url }}"> Movie Link </a>
-            {% endif %}
-        {% endfor %}
+    {% endfor %}
     <br/>
 </div>
