--- a/movie/templates/home.html
+++ b/movie/templates/home.html
@@ -7,23 +7,30 @@
 <h2>Moises Arturo Vergara Garces</h2>
 
 <div class="container"> <!-- mejora el espaciado de la pagina-->
-    <form action="">
-        Search for Movie:
-        <input type="text" class="form-control" name="searchMovie"/>
+    <form action=""> <!-- especifica que al hacer clic en enviar, enviamos el formulario a la misma página-->
+        <div class="mb-3"> <!-- agrega espacio inferior de 3 unidades-->
+            <label for="searchMovie" class="form-label"> <!-- asocia un texto descriptivo con un campo de entrada en un formulario-->
+                Search for Movie:
+            </label>
+            <input type="text" class="form-control" name="searchMovie"/>
+        </div>
         <button type="submit" class="btn btn-primary">Search</button>
     </form>
-    <p>Searching for {{searchTerm}}</p>
-    {% for movie in movies %}
-    <div class="card" style="width: 18rem;">
-        <img src="{{ movie.image.url }}" class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title">{{ movie.title }}</h5>
-            <p class="card-text">{{ movie.description }}</p>
-            {% if movie.url %}
-            <a href="{{ movie.url }}" class="btn btn-primary">Movie Link</a>
-            {% endif %}
+    <p>Searching for: {{searchTerm}}</p>
+    <div class="row row-cols-1 row-cols-md-3 g-4"> <!-- define una fila en una cuadrícula con una columna en pantallas extra pequeñas, hasta 3 en medianas o mayores -->
+        {% for movie in movies %}
+        <div v-for="movie in movies" class="col">
+            <div class="card">
+            <img src="{{ movie.image.url }}" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title fw-bold">{{ movie.title }}</h5>
+                <p class="card-text">{{ movie.description }}</p>
+                {% if movie.url %}
+                    <a href="{{ movie.url }}" class="btn btn-primary">Movie Link</a>
+                {% endif %}
+            </div>
         </div>
     </div>
-    {% endfor %}
-    <br/>
+        {% endfor %}
+    </div>
 </div>
