--- a/movie/templates/home.html
+++ b/movie/templates/home.html
@@ -1,6 +1,11 @@
+<!--
 <head>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 </head>
+-->
+
+{% extends 'base.html' %}
+{% block content %}
 
 <!-- <h1>Welcome to Home Page</h1> -->
 <h1>Welcome to Home Page, {{name}}</h1>
@@ -34,3 +39,4 @@
         {% endfor %}
     </div>
 </div>
+{% endblock content %}
