--- a/movie/templates/about.html
+++ b/movie/templates/about.html
@@ -1,1 +1,6 @@
+{% extends 'base.html' %}
+{% block content %}
+
 <h1>About: a web page where you can look and search for movies by name</h1>
+
+{% endblock content %}
