--- a/moviereviews/templates/base.html
+++ b/moviereviews/templates/base.html
@@ -5,19 +5,14 @@
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="{% url 'home' %}">
-      {% load static %}
-      <img src="{% static 'images/home.png' %}" alt="" width="30" height="24"
-          class="d-inline-block align-text-top" />
-      Movies
-    </a>
+    <a class="navbar-brand" href="#">Movies</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{% url 'news' %}">News</a>
+          <a class="nav-link active" aria-current="page" href="#">News</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Login</a>
@@ -34,4 +29,3 @@
     {% block contest %}
     {% endblock contest %}
 </div>
-
