--- a/moviereviews/templates/base.html
+++ b/moviereviews/templates/base.html
@@ -5,14 +5,14 @@
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Movies</a>
+    <a class="navbar-brand" href="{% url 'home' %}">Movies</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">News</a>
+          <a class="nav-link active" aria-current="page" href="{% url 'news' %}">News</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Login</a>
@@ -29,3 +29,13 @@
     {% block contest %}
     {% endblock contest %}
 </div>
+
+<footer class="text-center text-lg-start bg-light text-muted mt-4">
+  <div class="container">
+    <div class="row">
+      <div class="text-center p-4">
+        <h4>© 2025 Copyright - Paola Vallejo & Juan David Martínez</h4>
+      </div>
+    </div>
+  </div>
+</footer>
